--- a/config/config.yml
+++ b/config/config.yml
@@ -6,3 +6,9 @@ data_ingestion :
                   datafileLocation: artifacts/data_ingestion/data.zip
                   unzip_dir : artifacts/data_ingestion
 
+data_validation : 
+                  root_dir : artifacts/data_validation
+                  dataset_location : artifacts/data_ingestion/winequality-red.csv
+                  status_file : artifacts/data_validation/status.txt
+                  
+
